test: add unit, integration and transaction tests